--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
     
   </head>
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbar-start">
           <ul class="navbar-nav ms-auto mb-2 lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Inicio</a>
+              <a class="nav-link" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#product">Productos</a>
@@ -56,7 +56,7 @@
     <header>
       <section>
         <div class="card mb-3">
-            <img src="/assets/nuestro-local 1.jpg" class="card-img-top">
+            <img src="./assets/nuestro-local 1.jpg" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title" style="color: black">
                     Bienvenidos a Uruguay Motors: líderes en el rubro desde los
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="card mb-3">
-            <img src="/assets/Nuestro Local2.png" class="card-img-top">
+            <img src="./assets/Nuestro Local2.png" class="card-img-top">
             <div class="card-body">
               
 <h5 class="card-title">Trabaja con Nosotros</h5>
