--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
               tu presupuesto.
             </p>
             <div>
-              <img src="./assets/mo1.png" alt="" />
+              <img src="./assets/mo1.png" alt="" class="imagenMotor"/>
             </div>
           </div>
         </div>
