--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="col">
             
             <div class="card">
-              <img src="./assets/c1.jpg" class="card-img-top" width="100%">
+              <img src="./assets/c1.jpg" class="card-img-top altura" width="100%">
               <div class="card-body">
                 <h3 class="card-title">Faros antiniebla</h3>
                 <p class="card-text">
@@ -187,7 +187,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="./assets/c2.jpg" class="card-img-top" alt="...">
+              <img src="./assets/c2.jpg" class="card-img-top altura" alt="...">
               <div class="card-body">
                 <h3 class="card-title">Pintado moderno</h3>
                 <p class="card-text">
@@ -202,7 +202,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="./assets/c3.jpg" class="card-img-top" alt="...">
+              <img src="./assets/c3.jpg" class="card-img-top altura" alt="...">
               <div class="card-body">
                 <h3 class="card-title">Tapizado personalizado</h3>
                 <p class="card-text"> Nuestro servicio de tapizado personalizado transforma el
