--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+   <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
     
   </head>
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbar-start">
           <ul class="navbar-nav ms-auto mb-2 lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Inicio</a>
+              <a class="nav-link" href="./nosotros.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#product">Productos</a>
