--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbar-start">
           <ul class="navbar-nav ms-auto mb-2 lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="./nosotros.html">Inicio</a>
+              <a class="nav-link" href="../nosotros.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#product">Productos</a>
